Adding ReAct agent loop example

--- a/content/3.agents/2.react-agents.md
+++ b/content/3.agents/2.react-agents.md
@@ -99,6 +99,177 @@ Final Answer: Based on your location in New York City and the clear, pleasant we
 The clear weather makes outdoor activities particularly appealing tonight. What type of experience are you most interested in?
 ```
 
+## Practical Implementation Example
+
+Here's a complete JavaScript implementation of a ReAct agent using OpenAI's API:
+
+```javascript
+import OpenAI from "openai"
+import { getCurrentWeather, getLocation } from "./tools"
+
+export const openai = new OpenAI({
+    apiKey: process.env.OPENAI_API_KEY,
+    dangerouslyAllowBrowser: true
+})
+
+const availableFunctions = {
+    getCurrentWeather,
+    getLocation
+}
+
+/**
+ * Goal - build an agent that can answer any questions that might require knowledge about my current location and current weather at my location.
+ */
+
+const systemPrompt = `
+You cycle through Thought, Action, PAUSE, Observation. At the end of the loop you output a final Answer. Your final answer should be highly specific to the observations you have from running
+the actions.
+1. Thought: Describe your thoughts about the question you have been asked.
+2. Action: run one of the actions available to you - then return PAUSE.
+3. PAUSE
+4. Observation: will be the result of running those actions.
+
+Available actions:
+- getCurrentWeather: 
+    E.g. getCurrentWeather: Salt Lake City
+    Returns: current weather of the location specified.
+- getLocation:
+    E.g. getLocation: null
+    Returns: user's location details. No arguments needed.
+
+Example session:
+Question: Please give me some ideas for activities to do this afternoon.
+Thought: I should look up the user's location so I can give location-specific activity ideas.
+Action: getLocation: null
+PAUSE
+
+You will be called again with something like this:
+Observation: "New York City, NY"
+
+Then you loop again:
+Thought: To get even more specific activity ideas, I should get the current weather at the user's location.
+Action: getCurrentWeather: New York City
+PAUSE
+
+You'll then be called again with something like this:
+Observation: { location: "New York City, NY", forecast: ["sunny"] }
+
+You then output:
+Answer: <Suggested activities based on sunny weather that are highly specific to New York City and surrounding areas.>
+`
+
+async function agent(query) {
+    const messages = [
+        { role: "system", content: systemPrompt },
+        { role: "user", content: query }
+    ]
+    
+    const MAX_ITERATIONS = 5
+    const actionRegex = /^Action: (\w+): (.*)$/
+    
+    for (let i = 0; i < MAX_ITERATIONS; i++) {
+        console.log(`Iteration #${i + 1}`)
+        const response = await openai.chat.completions.create({
+            model: "gpt-3.5-turbo",
+            messages
+        })
+
+        const responseText = response.choices[0].message.content
+        console.log(responseText)
+        messages.push({ role: "assistant", content: responseText })
+        const responseLines = responseText.split("\n")
+
+        const foundActionStr = responseLines.find(str => actionRegex.test(str))
+        
+        if (foundActionStr) {
+            const actions = actionRegex["exec"](foundActionStr)
+            const [_, action, actionArg] = actions
+            
+            if (!availableFunctions.hasOwnProperty(action)) {
+                throw new Error(`Unknown action: ${action}: ${actionArg}`)
+            }
+            console.log(`Calling function ${action} with argument ${actionArg}`)
+            const observation = await availableFunctions[action](actionArg)
+            messages.push({ role: "assistant", content: `Observation: ${observation}` })
+        } else {
+            console.log("Agent finished with task")
+            return responseText
+        }
+    }
+}
+
+console.log(await agent("What are some activity ideas that I can do this afternoon based on my location and weather?"))
+```
+
+### How the Loop Works
+
+The ReAct loop in this implementation follows these key steps:
+
+1. **Initialization**: Start with system prompt and user query in messages array
+2. **Iteration Loop**: Maximum of 5 iterations to prevent infinite loops
+3. **Pattern Matching**: Use regex to detect `Action: functionName: argument` pattern
+4. **Function Execution**: Call the appropriate function from `availableFunctions`
+5. **Context Building**: Add each response and observation to maintain conversation context
+6. **Termination**: Loop ends when no more actions are found (final answer provided)
+
+### Multiple Example Scenarios
+
+#### Example 1: Weather-Based Activity Planning
+**Query**: "What are some activity ideas that I can do this afternoon based on my location and weather?"
+
+**Expected Loop**:
+1. **Thought**: Need location → **Action**: getLocation → **PAUSE**
+2. **Observation**: "San Francisco, CA"
+3. **Thought**: Need weather → **Action**: getCurrentWeather → **PAUSE** 
+4. **Observation**: `{location: "San Francisco, CA", forecast: ["foggy", "cool"]}`
+5. **Answer**: Indoor activities specific to SF (museums, cafes, shopping)
+
+#### Example 2: Travel Planning
+**Query**: "I'm planning a trip to Tokyo next month. What should I pack?"
+
+**Expected Loop**:
+1. **Thought**: Need current weather in Tokyo → **Action**: getCurrentWeather → **PAUSE**
+2. **Observation**: `{location: "Tokyo, Japan", forecast: ["mild", "rainy season"]}`
+3. **Answer**: Packing recommendations for rainy season in Tokyo
+
+#### Example 3: Local Restaurant Recommendations  
+**Query**: "What are some good dinner options near me?"
+
+**Expected Loop**:
+1. **Thought**: Need location → **Action**: getLocation → **PAUSE**
+2. **Observation**: "Austin, TX"
+3. **Answer**: Restaurant recommendations specific to Austin area
+
+### Key Implementation Details
+
+#### Message Management
+```javascript
+// Each iteration adds to conversation history
+messages.push({ role: "assistant", content: responseText })
+messages.push({ role: "assistant", content: `Observation: ${observation}` })
+```
+
+#### Action Parsing
+```javascript
+const actionRegex = /^Action: (\w+): (.*)$/
+const foundActionStr = responseLines.find(str => actionRegex.test(str))
+```
+
+#### Safety Mechanisms
+- **MAX_ITERATIONS**: Prevents infinite loops
+- **Function validation**: Checks if action exists before execution
+- **Error handling**: Throws descriptive errors for unknown actions
+
+#### Tool Integration
+```javascript
+const availableFunctions = {
+    getCurrentWeather,  // async function(location)
+    getLocation         // async function()
+}
+```
+
+This implementation demonstrates the core ReAct pattern with proper loop management, error handling, and real-world tool integration. The agent can handle various queries by dynamically determining what information it needs and using available tools to gather it.
+
 ## Key Benefits of ReAct
 
 1. **Enhanced Accuracy**: By gathering real-time information, ReAct agents provide more accurate and up-to-date responses
